centrage du text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>landing page</title>
 </head>
 <body style="background: cyan;">
-   <h1>Hello World</h1>
+   <h1 style = "padding-top: 20%;padding-bottom: 20%;text-align: center ">Hello World</h1>
 </body>
 </html>
