--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>landing page</title>
 </head>
-<body style="background: cyan;">
+<body style="background: gray;">
    <h1 style = "padding-top: 20%;padding-bottom: 20%;text-align: center ">Hello World</h1>
 </body>
 </html>
